Archive2/05/25336116bdd444/output
main.cpp:12:18: error: 'virtual void strct2::func(int)' marked override, but does not override
     virtual void func(int) override {}
                  ^
